--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "@angularclass/hmr-loader": "3.0.2",
     "angular2-jwt": "^0.1.28",
     "animate.css": "3.5.2",
+    "body-parser": "^1.17.1",
     "bootstrap": "4.0.0-alpha.4",
     "chart.js": "1.1.1",
     "chartist": "0.10.1",
     "core-js": "2.4.1",
     "easy-pie-chart": "2.1.7",
+    "express": "^4.15.2",
     "font-awesome": "4.7.0",
     "fullcalendar": "2.9.1",
     "google-maps": "3.2.1",
+    "helmet": "^3.5.0",
     "http-server": "0.9.0",
     "ie-shim": "0.1.0",
     "ionicons": "2.0.1",
