--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "homepage": "http://akveo.github.io/ng2-admin/",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.4.7",
-    "@angular/compiler": "2.4.7",
-    "@angular/core": "2.4.7",
-    "@angular/forms": "2.4.7",
-    "@angular/http": "2.4.7",
-    "@angular/platform-browser": "2.4.7",
-    "@angular/platform-browser-dynamic": "2.4.7",
-    "@angular/platform-server": "2.4.7",
+    "@angular/common": "2.4.10",
+    "@angular/compiler": "2.4.10",
+    "@angular/core": "2.4.10",
+    "@angular/forms": "2.4.10",
+    "@angular/http": "2.4.10",
+    "@angular/platform-browser": "2.4.10",
+    "@angular/platform-browser-dynamic": "2.4.10",
+    "@angular/platform-server": "2.4.10",
     "@angular/router": "3.4.7",
     "@angularclass/conventions-loader": "1.0.13",
     "@angularclass/hmr": "1.2.2",
@@ -52,7 +52,7 @@
     "zone.js": "0.7.7"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "2.4.7",
+    "@angular/compiler-cli": "2.4.10",
     "@types/electron": "1.4.32",
     "@types/fullcalendar": "2.7.37",
     "@types/hammerjs": "2.0.34",
@@ -77,7 +77,7 @@
     "es7-reflect-metadata": "1.6.0",
     "exports-loader": "0.6.3",
     "expose-loader": "0.7.3",
-    "extract-text-webpack-plugin": "2.0.0-rc.3",
+    "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.10.0",
     "find-root": "1.0.0",
     "font-awesome-sass-loader": "1.0.3",
