--- a/dll/vendor-manifest.json
+++ b/dll/vendor-manifest.json
@@ -1008,6 +1008,7 @@
         "VERSION",
         "Version",
         "PlatformLocation",
+        "LOCATION_INITIALIZED",
         "LocationStrategy",
         "APP_BASE_HREF",
         "HashLocationStrategy",
@@ -1987,7 +1988,8 @@
         "harmonyModule": true
       },
       "exports": [
-        "PlatformLocation"
+        "PlatformLocation",
+        "LOCATION_INITIALIZED"
       ]
     },
     "./node_modules/@angular/compiler/src/aot/compiler.js": {
@@ -2779,7 +2781,8 @@
         "serializeNodes",
         "sha1",
         "fingerprint",
-        "computeMsgId"
+        "computeMsgId",
+        "utf8Encode"
       ]
     },
     "./node_modules/@angular/compiler/src/i18n/extractor_merger.js": {
@@ -3877,6 +3880,7 @@
       },
       "exports": [
         "PlatformLocation",
+        "LOCATION_INITIALIZED",
         "LocationStrategy",
         "APP_BASE_HREF",
         "HashLocationStrategy",
@@ -4014,6 +4018,7 @@
       },
       "exports": [
         "PlatformLocation",
+        "LOCATION_INITIALIZED",
         "LocationStrategy",
         "APP_BASE_HREF",
         "HashLocationStrategy",
